###############################################################################
# Build
###############################################################################
add_library(test_upnp_av_test_helper)
add_library(Blabby::UPnPAVTestHelper ALIAS test_upnp_av_test_helper)

target_sources(test_upnp_av_test_helper
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/SoapBackendDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/SoapBackendDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/TestSoapCall.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/TestSoapCall.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ConnectionManagerActions.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ConnectionManagerActions.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ConnectionManagerStateVariables.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ConnectionManagerStateVariables.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ContentDirectoryActions.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ContentDirectoryActions.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ContentDirectoryStateVariables.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ContentDirectoryStateVariables.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Descriptions.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Descriptions.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ServiceDiscoveryBackendDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ServiceDiscoveryBackendDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/DescriptionFetcherBackendDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/DescriptionFetcherBackendDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/TestableMediaServerProviderFactory.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/TestableMediaServerProviderFactory.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/SoapCallDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/SoapCallDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ProtocolInfoResponse.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/AvTransportActions.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/AvTransportActions.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/AvTransportStateVariables.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/AvTransportStateVariables.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/RenderingControlStateVariables.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/RenderingControlStateVariables.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/RenderingControlActions.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/RenderingControlActions.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ServiceProviderDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ServiceProviderDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MediaServerDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MediaServerDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Response.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MediaRendererDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MediaRendererDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/EventBackendDouble.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/EventBackendDouble.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/AvTransportEventNotifies.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/VolumeResponse.hpp
)

target_link_libraries(test_upnp_av_test_helper
    PRIVATE
        Qt6::Test
        Blabby::UPnPAV
)

target_include_directories(test_upnp_av_test_helper
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
